# teste

KaisenScripts/: CMakeLists.txt  INSTALL.md  LEIA-ME.md  ONLINE_COMPILE.md  README.md  TUTORIAL_COMPLETO.md  build.bat  compile_console.bat  install_and_build.bat  kaisen_scripts.cpp  kaisen_scripts_console.cpp
